[workspace]
members = [
    "ports/servo",
    "tests/unit/*",
]
default-members = [
    "ports/servo",
    "tests/unit/*",
]
exclude = [".cargo"]

[profile.release]
opt-level = 3
# Uncomment to profile on Linux:
# debug = true
# lto = false

[patch.crates-io]
mozjs_sys = { git = "https://github.com/asajeffrey/mozjs.git", branch = "smup" }
mozjs = { git = "https://github.com/asajeffrey/rust-mozjs.git", branch = "smup" }
cc = { git = "https://github.com/jdm/cc-rs.git", branch = "patch-1" }
harfbuzz-sys = { git = "https://github.com/servo/rust-harfbuzz.git", branch = "android-clang" }
servo-fontconfig-sys = { git = "https://github.com/servo/libfontconfig.git", branch = "android-clang" }
# If you need to temporarily test Servo with a local fork of some upstream
# crate, add that here. Use the form:
#
#     <crate> = { path = "/path/to/local/checkout" }
#
# Or for a git dependency:
#
#     [patch."https://github.com/servo/<repository>"]
#     <crate> = { path = "/path/to/local/checkout" }
